refactor: refine the structure of `ObjectDiffHelper.java`